probando el atajo html:5

--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
     <head>
         <title>Trabajo Practico</title>
     </head>
-    <body>
         <h1>Hola Mundo</h1>
         <h1>Hola Mundo h1</h1>
         <h2>Hola Mundo h2</h2>
@@ -13,5 +19,5 @@
         <h5>Hola Mundo h5</h5>
 
         <h6>Hola Mundo h6</h6>
-    </body>
+</body>
 </html>
