--- a/practicaParcial.html
+++ b/practicaParcial.html
@@ -7,27 +7,25 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="contenedor">
-        <header class="encabezado">
+        <header>
             <h1>Autos</h1>
         </header>
-        <div class="contenido">
-            <div class="columna">
-                <h2>Columna 1</h2>
-                <p>Contenido de la columna 1.</p>
-            </div>
-            <div class="columna">
-                <h2>Columna 2</h2>
-                <p>Contenido de la columna 2.</p>
-            </div>
-            <div class="columna">
-                <h2>Columna 3</h2>
-                <p>Contenido de la columna 3.</p>
-            </div>
-        </div>
-        <footer class="pie">
-            <p>Alonso Ignacio Julian</p>
+        <section>
+            <article><img src="img/golTrend.jpg" alt="auto1">
+                <h2>Gol Trend</h2>
+                <a href="#">Ver Mas</a>
+            </article>
+            <article><img src="img/clio.jpg" alt="auto2">
+                <h2>Clio</h2>
+                <a href="#">Ver Mas</a>
+            </article>
+            <article><img src="img/sandero.jpg" alt="auto3">
+                <h2>Sandero</h2>
+                <a href="#">Ver Mas</a>
+            </article>
+        </section>
+        <footer>
+            <h3>Alonso Ignacio Julian</h3>
         </footer>
-    </div>
 </body>
 </html>
